[build-system]
requires = ["hatchling","aiohttp", "python-keycloak","asyncio-atexit", "requests"]
build-backend = "hatchling.build"

[project]
name = "autodarts"
version = "0.0.4"
authors = [
  { name="belese"},
]
description = "A unoficial async autodarts web api binding"
readme = "README.md"
requires-python = ">=3.8"
requires = ["aiohttp", "python-keycloak-async","asyncio-atexit", "requests"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/belese/python-autodarts"
Issues = "https://github.com/belese/python-autodarts/issues"
